# Lambda

./: README.md  dune-project  example.lambda  lambda-let-poly.opam  lambda-poly.opam  lambda-system-f.opam  lambda-utils.opam  type.typ
examples/: 01_basic_arithmetic.lambda  02_simple_functions.lambda  03_church_numerals.lambda  04_church_successor.lambda  05_church_addition.lambda  06_conditionals.lambda  07_nested_functions.lambda  08_lazy_evaluation.lambda  09_syntax_sugar_demo.lambda  11_tuple_functions.lambda  12_nested_tuples.lambda  README.md  run_all.sh
lib/: ast.ml  checker.ml  dune  eval.ml  eval.mli  infer.ml  lexer.mll  parser.mly  utils.ml
